Add tests for FileSystemTransaction class

--- a/FileSystemTransaction.Test/FileSystemTransaction.Test.csproj
+++ b/FileSystemTransaction.Test/FileSystemTransaction.Test.csproj
@@ -47,6 +47,7 @@
     <Compile Include="FileSystemTransaction\Command\CopyCommandTest.cs" />
     <Compile Include="FileSystemTransaction\Command\DeleteCommandTest.cs" />
     <Compile Include="FileSystemTransaction\Command\WriteCommandTest.cs" />
+    <Compile Include="FileSystemTransaction\FileSystemTransactionTest.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
