--- a/FileSystemTransaction/FileSystemTransaction.csproj
+++ b/FileSystemTransaction/FileSystemTransaction.csproj
@@ -40,6 +40,7 @@
     <Compile Include="FileSystemTransaction\Command\CopyCommand.cs" />
     <Compile Include="FileSystemTransaction\Command\DeleteCommand.cs" />
     <Compile Include="FileSystemTransaction\Command\WriteCommand.cs" />
+    <Compile Include="FileSystemTransaction\FileAlreadyExistsException.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
